styled friends/show page

--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -25,4 +25,4 @@
   </table>
 </div>
 
-<%= link_to "New friend", new_friend_path %>
+<%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
