--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+  <div class="form-group">
+    <%#= form.label :first_name, style: "display: block" %>
+    <%= form.text_field :first_name, class:"form-control", placeholder: :first_name %>
+  </div class="form-group">
+  <br>
+  <div class="form-group">
+    <%#= form.label :last_name, style: "display: block" %>
+    <%= form.text_field :last_name, class:"form-control", placeholder: :last_name %>
+  </div class="form-group">
+<br>
+  <div class="form-group">
+    <%#= form.label :email, style: "display: block" %>
+    <%= form.text_field :email, class:"form-control", placeholder: :email %>
   </div>
-
-  <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+<br>
+  <div class="form-group">
+    <%#= form.label :phone, style: "display: block" %>
+    <%= form.text_field :phone, class:"form-control", placeholder: :phone %>
   </div>
-
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+<br>
+  <div class="form-group">
+    <%#= form.label :twitter, style: "display: block" %>
+    <%= form.text_field :twitter, class:"form-control", placeholder: :twitter %>
   </div>
-
-  <div>
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
-  </div>
-
-  <div>
-    <%= form.label :twitter, style: "display: block" %>
-    <%= form.text_field :twitter %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+  <br>
+  <div class="form-group">
+    <%= form.submit class:"btn btn-success" %>
   </div>
 <% end %>
