--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -5,6 +5,8 @@
 <br>
 
 <div>
-  <%= link_to "Show this friend", @friend %> |
-  <%= link_to "Back to friends", friends_path %>
+  <%= link_to "Show this friend", @friend, class:"btn btn-secondary" %>
+  <br>
+  <br>
+  <%= link_to "Back to friends", friends_path, class:"btn btn-dark" %>
 </div>
