--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -9,6 +9,7 @@
       <th scope="col">Email</th>
       <th scope="col">Phone</th>
       <th scope="col">Twitter</th>
+      <th scope="col">User Id</th>
       <th scope="col"></th>
       <th scope="col"></th>
       <th scope="col"></th>
@@ -17,7 +18,9 @@
   <tbody>
   
   <% @friends.each do |friend| %>
+    <% if friend.user == current_user %>
     <%= render friend %>
+    <% end %>
   <% end %>
   </tbody>
   </table>
