more styling stuff

--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,15 +1,10 @@
 <tr id="<%= dom_id friend %>">
-      <th scope="row"><%= friend.first_name %></th>
-      <td><%= friend.last_name %></td>
+      <th scope="row"><%= link_to "#{friend.first_name} #{friend.last_name}", edit_friend_path(friend) %></th>
       <td><%= friend.email %></td>
       <td><%= friend.phone %></td>
-      <td><%= friend.twitter %></td>
-      <td><%= friend.user_id %></td>
-      <td><%= link_to "Show", friend %></td>
-      
+      <td><%= friend.twitter %></td> 
       <%# if friend.user == current_user %>
-      <td><%= link_to "Edit", edit_friend_path(friend) %></td>
-      <td><%= button_to "Destroy", friend, method: :delete %></td>
+      <td><%= button_to "Delete", friend, method: :delete, class:"btn btn-outline-danger btn-small" %></td>
       
       <%# else %>
 
