--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -9,4 +9,6 @@
   <br>
   <br>
   <%= link_to "Back to friends", friends_path, class:"btn btn-dark" %>
+  <br><br>
+  <%= button_to "Delete", @friend, method: :delete, class:"btn btn-danger btn-small" %>
 </div>
