--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? %>
+
 <h1>Friends List</h1>
 
 <div id="friends">
@@ -5,14 +7,11 @@
   <thead>
     <tr>
       <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
+      <%# <th scope="col">Last Name</th> %>
       <th scope="col">Email</th>
       <th scope="col">Phone</th>
       <th scope="col">Twitter</th>
-      <th scope="col">User Id</th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-      <th scope="col"></th>
+      <th> </th>
     </tr>
   </thead>
   <tbody>
@@ -27,3 +26,13 @@
 </div>
 
 <%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
+
+<% else %>
+
+<h1>Home#index</h1>
+<p>Find me in app/views/home/index.html.erb</p>
+<h2>YEEEEET</h2>
+
+
+
+<% end %>
