--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -3,9 +3,9 @@
   <p class="lead">
   <%= @friend.email %> | <%= @friend.phone %> | <%= @friend.twitter %>
   </p>
-  <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-secondary" %> |
-  <%= link_to "Back to friends", friends_path, class:"btn btn-dark" %>
+  <%= link_to "Edit", edit_friend_path(@friend), class:"btn btn-secondary" %>
+  <%= link_to "Back", friends_path, class:"btn btn-dark" %>
   <br>
   <br>
-  <%= button_to "Destroy this friend", @friend, method: :delete, class:"btn btn-danger" %>
+  <%= button_to "Delete", @friend, method: :delete, class:"btn btn-danger" %>
 </div>
